--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,8 @@
 /public/assets
 .byebug_history
 
+# Ignore compiled client
+/public/client
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
