--- a/app/client/tsconfig.json
+++ b/app/client/tsconfig.json
@@ -15,7 +15,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "module": "es2020",
+    "module": "ESNext",
     "lib": [
       "es2018",
       "dom"
