set up absolute path referencing

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -19,13 +19,13 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@ngx-formly/core": "^5.0.0",
+    "@ngx-formly/ng-zorro-antd": "^0.0",
     "@ngx-formly/schematics": "^5.10.10",
     "ng-zorro-antd": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "@ngx-formly/core": "^5.0.0",
-    "@ngx-formly/ng-zorro-antd": "^0.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
