--- a/app/client/package.json
+++ b/app/client/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "private": true,
   "dependencies": {
@@ -19,9 +20,12 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@apollo/client": "^3.0.0",
     "@ngx-formly/core": "^5.0.0",
     "@ngx-formly/ng-zorro-antd": "^0.0",
     "@ngx-formly/schematics": "^5.10.10",
+    "apollo-angular": "^2.1.0",
+    "graphql": "^15.0.0",
     "ng-zorro-antd": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -31,9 +35,15 @@
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
+    "@graphql-codegen/cli": "1.20.0",
+    "@graphql-codegen/introspection": "^1.18.1",
+    "@graphql-codegen/typescript": "1.20.0",
+    "@graphql-codegen/typescript-apollo-angular": "2.2.1",
+    "@graphql-codegen/typescript-operations": "^1.17.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "graphql": "^15.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
