--- a/app/client/package.json
+++ b/app/client/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "lint:schema": "graphql-codegen --config codegen.yml"
   },
   "private": true,
   "dependencies": {
