working with graphql codegen stuff

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -7,9 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "lint:schema": "graphql-codegen --config codegen.yml",
     "e2e": "ng e2e",
-    "generate": "graphql-codegen --config codegen.yml",
-    "lint:schema": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "private": true,
   "dependencies": {
@@ -24,9 +24,7 @@
     "@apollo/client": "^3.0.0",
     "@ngx-formly/core": "^5.0.0",
     "@ngx-formly/ng-zorro-antd": "^0.0",
-    "@ngx-formly/schematics": "^5.10.10",
     "apollo-angular": "^2.1.0",
-    "graphql": "^15.0.0",
     "ng-zorro-antd": "^11.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -34,6 +32,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
+    "@angular-eslint/eslint-plugin": "^1.0.0",
+    "@angular-eslint/eslint-plugin-template": "^1.0.0",
+    "@angular-eslint/template-parser": "^1.0.0",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
     "@graphql-codegen/cli": "1.20.0",
@@ -41,10 +42,24 @@
     "@graphql-codegen/typescript": "1.20.0",
     "@graphql-codegen/typescript-apollo-angular": "2.2.1",
     "@graphql-codegen/typescript-operations": "^1.17.13",
+    "@graphql-eslint/eslint-plugin": "^0.7.1",
+    "@graphql-inspector/cli": "^2.3.0",
+    "@ngx-formly/schematics": "^5.10.10",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "codelyzer": "^6.0.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^31.0.3",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
+    "graphql-config": "^3.2.0",
+    "graphql-schema-linter": "^2.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
