--- a/app/client/package.json
+++ b/app/client/package.json
@@ -58,6 +58,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
+    "graphql-cli": "^4.1.0",
     "graphql-config": "^3.2.0",
     "graphql-schema-linter": "^2.0.1",
     "jasmine-core": "~3.6.0",
