tweaked yarn scripts

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "lint:schema": "graphql-codegen --config codegen.yml",
     "e2e": "ng e2e",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen"
   },
   "private": true,
   "dependencies": {
