tweaked graphql lint rules, location of generated schema

--- a/app/client/.graphqlrc.yml
+++ b/app/client/.graphqlrc.yml
@@ -8,6 +8,6 @@ extensions:
           - "typescript"
           - "typescript-operations"
           - "typescript-apollo-angular"
-      ./model/generated/graphql.schema.json:
+      ./schema/civic.schema.json:
         plugins:
           - "introspection"
