--- a/app/client/package.json
+++ b/app/client/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "lint:schema": "eslint model/civic.graphql",
+    "api:mock": "node scripts/graphql-mock.js",
     "e2e": "ng e2e",
     "generate": "graphql-codegen"
   },
@@ -60,6 +61,7 @@
     "graphql": "^15.4.0",
     "graphql-cli": "^4.1.0",
     "graphql-config": "^3.2.0",
+    "graphql-mock": "^1.3.0",
     "graphql-schema-linter": "^2.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
