added mock data

--- a/app/client/package.json
+++ b/app/client/package.json
@@ -38,6 +38,7 @@
     "@angular-eslint/template-parser": "^1.0.0",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
+    "@angular/language-server": "^11.1.0",
     "@graphql-codegen/cli": "1.20.0",
     "@graphql-codegen/introspection": "^1.18.1",
     "@graphql-codegen/typescript": "1.20.0",
@@ -51,6 +52,7 @@
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/eslint-plugin-tslint": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
+    "casual": "^1.6.2",
     "codelyzer": "^6.0.0",
     "eslint": "^7.17.0",
     "eslint-plugin-import": "^2.22.1",
