--- a/model/package.json
+++ b/model/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@graphql-cli/codegen": "1.17.16",
     "@graphql-codegen/add": "2.0.2",
+    "@graphql-codegen/cli": "^1.20.0",
     "@graphql-codegen/typescript": "1.19.0",
     "@types/glob": "7.1.3",
     "@types/graphql": "14.2.3",
