--- a/model/package.json
+++ b/model/package.json
@@ -8,7 +8,8 @@
     "develop": "ts-node src/index.ts",
     "start": "node dist/index.js",
     "watch": "tsc -w",
-    "generate": "graphback generate && graphql codegen"
+    "lint": "eslint model/civic.graphql",
+    "generate": "graphql codegen"
   },
   "license": "Apache 2.0",
   "dependencies": {
@@ -17,7 +18,6 @@
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "graphback": "1.1.0",
     "graphql": "15.3.0",
     "graphql-config": "3.0.3",
     "graphql-migrations": "1.1.0",
@@ -31,11 +31,16 @@
     "@graphql-codegen/add": "2.0.2",
     "@graphql-codegen/cli": "^1.20.0",
     "@graphql-codegen/typescript": "1.19.0",
+    "@graphql-codegen/typescript-apollo-angular": "^2.2.1",
+    "@graphql-eslint/eslint-plugin": "^0.7.2",
     "@types/glob": "7.1.3",
     "@types/graphql": "14.2.3",
     "@types/node-fetch": "2.5.7",
-    "graphback-cli": "1.1.0",
-    "graphql-cli": "4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "eslint": "^7.17.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^31.0.3",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
     "typescript": "4.0.3"
