--- a/model/package.json
+++ b/model/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/index.js",
     "watch": "tsc -w",
     "lint": "eslint model/civic.graphql",
-    "generate": "graphql codegen"
+    "generate": "graphql-codegen"
   },
   "license": "Apache 2.0",
   "dependencies": {
@@ -18,7 +18,7 @@
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "graphql": "15.3.0",
+    "graphql": "^15.4.0",
     "graphql-config": "3.0.3",
     "graphql-migrations": "1.1.0",
     "graphql-subscriptions": "1.1.0",
@@ -30,7 +30,9 @@
     "@graphql-cli/codegen": "1.17.16",
     "@graphql-codegen/add": "2.0.2",
     "@graphql-codegen/cli": "^1.20.0",
+    "@graphql-codegen/introspection": "^1.18.1",
     "@graphql-codegen/typescript": "1.19.0",
+    "@graphql-codegen/typescript-operations": "^1.17.13",
     "@graphql-codegen/typescript-apollo-angular": "^2.2.1",
     "@graphql-eslint/eslint-plugin": "^0.7.2",
     "@types/glob": "7.1.3",
@@ -41,6 +43,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^31.0.3",
     "eslint-plugin-prefer-arrow": "^1.2.2",
+    "graphql-mock": "^1.3.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
     "typescript": "4.0.3"
