--- a/schema/package.json
+++ b/schema/package.json
@@ -2,18 +2,13 @@
   "version": "1.1.0",
   "description": "Graphback runtime template with Apollo Server and PostgreSQL",
   "private": true,
-  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "develop": "ts-node src/index.ts",
-    "start": "node dist/index.js",
-    "watch": "tsc -w",
+    "serve": "gqlserve serve graphql --port=4000",
     "lint": "eslint graphql/civic.graphql",
     "generate": "graphql-codegen"
   },
   "license": "Apache 2.0",
   "dependencies": {
-    "@graphback/runtime-knex": "1.1.0",
     "apollo-server-express": "2.19.0",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
@@ -23,7 +18,6 @@
     "graphql-migrations": "1.1.0",
     "graphql-subscriptions": "1.1.0",
     "graphql-tag": "2.11.0",
-    "knex": "0.21.6",
     "pg": "8.4.0"
   },
   "devDependencies": {
@@ -32,8 +26,8 @@
     "@graphql-codegen/cli": "^1.20.0",
     "@graphql-codegen/introspection": "^1.18.1",
     "@graphql-codegen/typescript": "1.19.0",
-    "@graphql-codegen/typescript-operations": "^1.17.13",
     "@graphql-codegen/typescript-apollo-angular": "^2.2.1",
+    "@graphql-codegen/typescript-operations": "^1.17.13",
     "@graphql-eslint/eslint-plugin": "^0.7.2",
     "@types/glob": "7.1.3",
     "@types/graphql": "14.2.3",
@@ -44,6 +38,7 @@
     "eslint-plugin-jsdoc": "^31.0.3",
     "eslint-plugin-prefer-arrow": "^1.2.2",
     "graphql-mock": "^1.3.0",
+    "graphql-serve": "^1.1.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
     "typescript": "4.0.3"
