--- a/schema/.graphqlrc.yml
+++ b/schema/.graphqlrc.yml
@@ -1,40 +1,24 @@
-schema: ./graphql/*.graphql
-documents: ../client/src/**/*.graphql
+schema: ./src/schema/schema.graphql
 extensions:
   codegen:
     generates:
-      ../client/src/generated/gqlService.ts:
+      ./src/generated-types.ts:
+        config:
+          scalars:
+            GraphbackDate: Date
+            GraphbackDateTime: Date
+            GraphbackJSON: any
+            GraphbackJSONObject: '{ [key: string]: any }'
+            GraphbackObjectID: string
+            GraphbackTime: string
+            GraphbackTimestamp: number
         plugins:
-          - typescript
-          - typescript-operations
-          - typescript-apollo-angular
           - add:
               content: /* eslint-disable */
-
-      ./generated/gql.schema.json:
-        plugins:
-          - introspection
-
-# extensions:
-#   codegen:
-#     generates:
-#       ./src/generated-types.ts:
-#         config:
-#           scalars:
-#             GraphbackDate: Date
-#             GraphbackDateTime: Date
-#             GraphbackJSON: any
-#             GraphbackJSONObject: '{ [key: string]: any }'
-#             GraphbackObjectID: string
-#             GraphbackTime: string
-#             GraphbackTimestamp: number
-#         plugins:
-#           - add:
-#               content: /* eslint-disable */
-#           - typescript
-#   graphback:
-#     model: ./model/**/*.graphql
-#     plugins:
-#       graphback-schema:
-#         format: graphql
-#         outputPath: ./src/schema/schema.graphql
+          - typescript
+  graphback:
+    model: ./model/**/*.graphql
+    plugins:
+      graphback-schema:
+        format: graphql
+        outputPath: ./src/schema/schema.graphql
