--- a/schema/package.json
+++ b/schema/package.json
@@ -1,44 +1,38 @@
 {
   "version": "1.1.0",
-  "description": "Graphback runtime template with Apollo Server and PostgreSQL",
+  "description": "Graphback runtime template with Apollo Server and MongoDb",
   "private": true,
+  "main": "dist/index.js",
   "scripts": {
-    "serve": "gqlserve serve graphql --port=4000",
-    "lint": "eslint graphql/civic.graphql",
-    "generate": "graphql-codegen"
+    "build": "tsc",
+    "develop": "ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "watch": "tsc -w",
+    "generate": "graphback generate && graphql codegen"
   },
   "license": "Apache 2.0",
   "dependencies": {
+    "@graphback/runtime-mongo": "1.1.0",
     "apollo-server-express": "2.19.0",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "graphql": "^15.4.0",
+    "graphback": "1.1.0",
+    "graphql": "15.3.0",
     "graphql-config": "3.0.3",
-    "graphql-migrations": "1.1.0",
     "graphql-subscriptions": "1.1.0",
     "graphql-tag": "2.11.0",
-    "pg": "8.4.0"
+    "mongodb": "3.6.2"
   },
   "devDependencies": {
     "@graphql-cli/codegen": "1.17.16",
     "@graphql-codegen/add": "2.0.2",
-    "@graphql-codegen/cli": "^1.20.0",
-    "@graphql-codegen/introspection": "^1.18.1",
     "@graphql-codegen/typescript": "1.19.0",
-    "@graphql-codegen/typescript-apollo-angular": "^2.2.1",
-    "@graphql-codegen/typescript-operations": "^1.17.13",
-    "@graphql-eslint/eslint-plugin": "^0.7.2",
     "@types/glob": "7.1.3",
     "@types/graphql": "14.2.3",
     "@types/node-fetch": "2.5.7",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "eslint": "^7.17.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^31.0.3",
-    "eslint-plugin-prefer-arrow": "^1.2.2",
-    "graphql-mock": "^1.3.0",
-    "graphql-serve": "^1.1.0",
+    "graphback-cli": "1.1.0",
+    "graphql-cli": "4.1.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
     "typescript": "4.0.3"
