--- a/schema/package.json
+++ b/schema/package.json
@@ -25,14 +25,17 @@
     "mongodb": "3.6.2"
   },
   "devDependencies": {
-    "@graphql-cli/codegen": "1.17.16",
     "@graphql-codegen/add": "2.0.2",
+    "@graphql-codegen/cli": "^1.20.1",
     "@graphql-codegen/typescript": "1.19.0",
+    "@graphql-codegen/typescript-apollo-angular": "^2.3.0",
+    "@graphql-codegen/typescript-operations": "^1.17.14",
+    "@graphql-eslint/eslint-plugin": "^0.8.0",
     "@types/glob": "7.1.3",
     "@types/graphql": "14.2.3",
     "@types/node-fetch": "2.5.7",
     "graphback-cli": "1.1.0",
-    "graphql-cli": "4.1.0",
+    "graphql-cli": "^4.1.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
     "typescript": "4.0.3"
