--- a/schema/package.json
+++ b/schema/package.json
@@ -8,37 +8,32 @@
     "develop": "ts-node src/index.ts",
     "start": "node dist/index.js",
     "watch": "tsc -w",
-    "generate": "graphback generate && graphql codegen"
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "license": "Apache 2.0",
   "dependencies": {
-    "@graphback/runtime-mongo": "1.1.0",
     "apollo-server-express": "2.19.0",
-    "cors": "2.8.5",
-    "dotenv": "8.2.0",
-    "express": "4.17.1",
-    "graphback": "1.1.0",
     "graphql": "15.3.0",
     "graphql-config": "3.0.3",
     "graphql-subscriptions": "1.1.0",
-    "graphql-tag": "2.11.0",
-    "mongodb": "3.6.2"
+    "graphql-tag": "2.11.0"
   },
   "devDependencies": {
     "@graphql-codegen/add": "2.0.2",
-    "@graphql-codegen/cli": "^1.20.1",
-    "@graphql-codegen/typescript": "1.19.0",
-    "@graphql-codegen/typescript-apollo-angular": "^2.3.0",
-    "@graphql-codegen/typescript-operations": "^1.17.14",
+    "@graphql-codegen/cli": "1.20.1",
+    "@graphql-codegen/typescript": "1.20.2",
+    "@graphql-codegen/typescript-apollo-angular": "2.3.0",
+    "@graphql-codegen/typescript-operations": "1.17.14",
     "@graphql-eslint/eslint-plugin": "^0.8.0",
     "@types/glob": "7.1.3",
     "@types/graphql": "14.2.3",
     "@types/node-fetch": "2.5.7",
-    "graphback-cli": "1.1.0",
     "graphql-cli": "^4.1.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
-    "typescript": "4.0.3"
+    "typescript": "4.0.3",
+    "@graphql-codegen/fragment-matcher": "2.0.1",
+    "@graphql-codegen/introspection": "1.18.1"
   },
   "author": {
     "name": "Joshua McMichael"
