--- a/schema/package.json
+++ b/schema/package.json
@@ -8,7 +8,7 @@
     "develop": "ts-node src/index.ts",
     "start": "node dist/index.js",
     "watch": "tsc -w",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config=.graphqlrc.yml"
   },
   "license": "Apache 2.0",
   "dependencies": {
