committing in-progress schema workflow to merge w/ main for sharing repo

--- a/schema/tsconfig.json
+++ b/schema/tsconfig.json
@@ -20,8 +20,8 @@
     "strict": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
-    "target": "es6",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "ESNext",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
