--- a/schema/package.json
+++ b/schema/package.json
@@ -21,19 +21,20 @@
   "devDependencies": {
     "@graphql-codegen/add": "2.0.2",
     "@graphql-codegen/cli": "1.20.1",
+    "@graphql-codegen/fragment-matcher": "2.0.1",
+    "@graphql-codegen/introspection": "1.18.1",
     "@graphql-codegen/typescript": "1.20.2",
     "@graphql-codegen/typescript-apollo-angular": "2.3.0",
     "@graphql-codegen/typescript-operations": "1.17.14",
     "@graphql-eslint/eslint-plugin": "^0.8.0",
+    "@graphql-tools/mock": "^7.0.0",
     "@types/glob": "7.1.3",
     "@types/graphql": "14.2.3",
     "@types/node-fetch": "2.5.7",
     "graphql-cli": "^4.1.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
-    "typescript": "4.0.3",
-    "@graphql-codegen/fragment-matcher": "2.0.1",
-    "@graphql-codegen/introspection": "1.18.1"
+    "typescript": "4.0.3"
   },
   "author": {
     "name": "Joshua McMichael"
