--- a/server/Gemfile
+++ b/server/Gemfile
@@ -24,6 +24,7 @@ gem 'omniauth-rails_csrf_protection', '~> 1.0.0'
 
 gem 'graphql','~> 1.12.4'
 gem 'graphql-batch', '~>0.4.3'
+gem 'search_object_graphql', '0.3.1'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
