test that schema file on disk is up to date

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,9 +4,9 @@ defaults:
     working-directory: server
 on:
   push:
-    branches: [ master, staging ]
+    branches: [ main, staging ]
   pull_request:
-    branches: [ master, staging]
+    branches: [ main, staging]
 
 jobs:
   tests:
