--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
         env:
           CI_BUILD: true
           RAILS_ENV: test
-        run: bundle exec rake db:create db:schema:load
+        run: bundle exec rails db:create db:schema:load
 
       - name: Run Tests
         env:
