--- a/schema/.graphqlrc.yml
+++ b/schema/.graphqlrc.yml
@@ -1,7 +1,7 @@
 # collect & merge model types 
 schema: ./model/*.graphql
 # collect & merge client queries, mutations, fragments
-documents: ../client/src/**/*.graphql
+# documents: ../client/src/**/*.graphql
 extensions:
   codegen:
     config:
