--- a/server/Gemfile
+++ b/server/Gemfile
@@ -26,6 +26,8 @@ gem 'graphql','~> 1.12.4'
 gem 'graphql-batch', '~>0.4.3'
 gem 'search_object_graphql', '0.3.1'
 
+gem 'scenic', '~>1.5.4'
+
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
 
