--- a/client/package.json
+++ b/client/package.json
@@ -34,8 +34,8 @@
     "@angular-eslint/eslint-plugin": "^1.0.0",
     "@angular-eslint/eslint-plugin-template": "^1.0.0",
     "@angular-eslint/template-parser": "^1.0.0",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler-cli": "~11.0.5",
+    "@angular/cli": "11.1.4",
+    "@angular/compiler-cli": "11.1.2",
     "@angular/language-server": "^11.1.0",
     "@graphql-codegen/cli": "1.20.0",
     "@graphql-codegen/introspection": "^1.18.1",
