got custom webpack config working with angular-cli, required manually applying PR: https://github.com/angular/angular-cli/pull/20097/files

--- a/client/angular.json
+++ b/client/angular.json
@@ -109,7 +109,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/ng-zorro-antd/ng-zorro-antd.less"
+              "src/styles.less"
             ],
             "scripts": []
           }
