--- a/client/angular.json
+++ b/client/angular.json
@@ -98,8 +98,15 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/custom-webpack:karma",
           "options": {
+            "customWebpackConfig": {
+              "path": "./custom-webpack.config.js",
+              "mergeStrategies": {
+                "module.rules": "append"
+              },
+              "replaceDuplicatePlugins": true
+            },
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
@@ -109,7 +116,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "node_modules/ng-zorro-antd/ng-zorro-antd.less"
             ],
             "scripts": []
           }
