--- a/client/package.json
+++ b/client/package.json
@@ -74,6 +74,7 @@
     "svg-inline-loader": "^0.8.2",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "webpack-bundle-analyzer": "^4.4.0"
   }
 }
