svg icons imported and working with NzIconService

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -7,7 +7,8 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "src/polyfills.ts",
+    "src/generated/civic.icons.ts"
   ],
   "include": [
     "src/**/*.d.ts"
