--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "generate-icons": "svg-to-ts",
     "postinstall": "patch-package"
   },
   "private": true,
@@ -73,7 +74,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "patch-package": "^6.2.2",
     "protractor": "~7.0.0",
-    "svg-inline-loader": "^0.8.2",
+    "svg-to-ts": "^6.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2",
