--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@ngx-formly/ng-zorro-antd": "^0.0",
     "apollo-angular": "^2.1.0",
     "ng-zorro-antd": "^11.0.0",
+    "ngx-logger": "^4.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
