--- a/client/angular.json
+++ b/client/angular.json
@@ -18,7 +18,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "cvc",
       "architect": {
         "build": {
           "builder": "@angular-builders/custom-webpack:browser",
