configured client to pass XSRF tokens properly in prod and dev

--- a/client/angular.json
+++ b/client/angular.json
@@ -83,7 +83,8 @@
         "serve": {
           "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
-            "browserTarget": "main:build"
+            "browserTarget": "main:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
