styles now loaded from local styles file

--- a/client/angular.json
+++ b/client/angular.json
@@ -46,7 +46,7 @@
               }
             ],
             "styles": [
-              "node_modules/ng-zorro-antd/ng-zorro-antd.less"
+              "src/styles.less"
             ],
             "scripts": []
           },
@@ -117,7 +117,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/ng-zorro-antd/ng-zorro-antd.less"
+              "src/styles.less"
             ],
             "scripts": []
           }
