--- a/client/package.json
+++ b/client/package.json
@@ -74,6 +74,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "patch-package": "^6.2.2",
+    "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "svg-to-ts": "^6.0.0",
     "ts-node": "~8.3.0",
