--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "@angular/compiler-cli": "11.2.2",
     "@angular/language-server": "^11.1.0",
     "@graphql-codegen/cli": "1.20.0",
+    "@graphql-codegen/fragment-matcher": "^2.0.1",
     "@graphql-codegen/introspection": "^1.18.1",
     "@graphql-codegen/typescript": "1.20.0",
     "@graphql-codegen/typescript-apollo-angular": "2.2.1",
