updated graphql-config, regereated service

--- a/client/.graphqlrc.yml
+++ b/client/.graphqlrc.yml
@@ -18,3 +18,5 @@ extensions:
           - fragment-matcher
           - add:
               content: /* eslint-disable */
+        config:
+          apolloClientVersion: 3
