--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "@angular/cli": "^11.2.1",
     "@angular/compiler-cli": "11.2.2",
     "@angular/language-server": "^11.1.0",
+    "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "1.20.0",
     "@graphql-codegen/fragment-matcher": "^2.0.1",
     "@graphql-codegen/introspection": "^1.18.1",
