added yarn script 'generate-apollo'

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "generate-icons": "svg-to-ts",
+    "generate-apollo": "graphql-codegen",
     "postinstall": "patch-package"
   },
   "private": true,
