--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,6 @@ jobs:
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
-        working-directory: ./server
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          base-path: ./server
