--- a/client/.graphqlrc.yml
+++ b/client/.graphqlrc.yml
@@ -15,8 +15,12 @@ extensions:
           - typescript
           - typescript-operations
           - typescript-apollo-angular
-          - fragment-matcher
           - add:
               content: /* eslint-disable */
         config:
           apolloClientVersion: 3
+      ./src/app/generated/civic.possible-types.json:
+        plugins:
+          - fragment-matcher
+        config:
+          apolloClientVersion: 2
