--- a/client/.graphqlrc.yml
+++ b/client/.graphqlrc.yml
@@ -19,7 +19,7 @@ extensions:
               content: /* eslint-disable */
         config:
           apolloClientVersion: 3
-      ./src/app/generated/civic.possible-types.json:
+      ./src/app/generated/civic.possible-types.ts:
         plugins:
           - fragment-matcher
         config:
