InMemoryCache now (hopefully) configured to use relay paging

--- a/client/.graphqlrc.yml
+++ b/client/.graphqlrc.yml
@@ -24,3 +24,8 @@ extensions:
           - fragment-matcher
         config:
           apolloClientVersion: 2
+      ./src/app/generated/civic.type-policies.ts:
+        plugins:
+          - typescript-apollo-client-helpers
+        config:
+          useTypeImports: true
