--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "@graphql-codegen/introspection": "^1.18.1",
     "@graphql-codegen/typescript": "1.20.0",
     "@graphql-codegen/typescript-apollo-angular": "2.2.1",
+    "@graphql-codegen/typescript-apollo-client-helpers": "^1.1.3",
     "@graphql-codegen/typescript-operations": "^1.17.13",
     "@graphql-eslint/eslint-plugin": "^0.7.1",
     "@graphql-inspector/cli": "^2.3.0",
