--- a/server/Gemfile
+++ b/server/Gemfile
@@ -31,6 +31,8 @@ gem 'scenic', '~>1.5.4'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
 
+gem 'diffy', '~> 3.4.0'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
