--- a/client/package.json
+++ b/client/package.json
@@ -82,6 +82,7 @@
     "patch-package": "^6.2.2",
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
+    "rxjs-spy": "^7.5.3",
     "svg-to-ts": "^6.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
