--- a/server/Gemfile
+++ b/server/Gemfile
@@ -33,6 +33,9 @@ gem 'bootsnap', '>= 1.4.4', require: false
 
 gem 'diffy', '~> 3.4.0'
 
+gem 'active_storage_validations', '~> 0.9.2'
+gem 'image_processing', '~> 1.12.1'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
