Display user profile images if they are set

--- a/client/proxy.config.json
+++ b/client/proxy.config.json
@@ -2,5 +2,9 @@
   "/api/graphql": {
     "target": "http://localhost:3000",
     "secure": false
+  },
+  "/rails": {
+    "target": "http://localhost:3000",
+    "secure": false
   }
 }
