Setup Trestle for use as admin console

--- a/server/Gemfile
+++ b/server/Gemfile
@@ -36,6 +36,9 @@ gem 'diffy', '~> 3.4.0'
 gem 'active_storage_validations', '~> 0.9.2'
 gem 'image_processing', '~> 1.12.1'
 
+gem 'trestle', '~>0.9.5'
+gem 'trestle-search', '~>0.4.3'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
