--- a/client/proxy.config.json
+++ b/client/proxy.config.json
@@ -1,9 +1,21 @@
 {
+  "/api/auth": {
+    "target": "http://localhost:3000",
+    "secure": false
+  },
   "/api/graphql": {
     "target": "http://localhost:3000",
     "secure": false
   },
   "/rails": {
+    "target": "http://localhost:3000",
+    "secure": false
+  },
+  "/sign_in": {
+    "target": "http://localhost:3000",
+    "secure": false
+  },
+  "/packs/js": {
     "target": "http://localhost:3000",
     "secure": false
   }
