added sign_out to dev proxy, implemented baseline Viewer.signOut()

--- a/client/proxy.config.json
+++ b/client/proxy.config.json
@@ -15,6 +15,10 @@
     "target": "http://localhost:3000",
     "secure": false
   },
+  "/sign_out": {
+    "target": "http://localhost:3000",
+    "secure": false
+  },
   "/packs/js": {
     "target": "http://localhost:3000",
     "secure": false
