tweaked codegen config to export maybe values that will be easier to deal with

--- a/client/.graphqlrc.yml
+++ b/client/.graphqlrc.yml
@@ -20,6 +20,9 @@ extensions:
         config:
           apolloClientVersion: 3
           nonOptionalTypename: true
+          futureProofUnions: true
+          futureProofEnums: true
+          maybeValue: T | null | undefined
       ./src/app/generated/civic.possible-types.ts:
         plugins:
           - fragment-matcher
