codegen Maybe uses undefined instead of null

--- a/client/.graphqlrc.yml
+++ b/client/.graphqlrc.yml
@@ -22,7 +22,7 @@ extensions:
           nonOptionalTypename: true
           futureProofUnions: true
           futureProofEnums: true
-          maybeValue: T | null | undefined
+          maybeValue: T | undefined
       ./src/app/generated/civic.possible-types.ts:
         plugins:
           - fragment-matcher
