added pkg script that runs graphql codegen in watch mode

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "e2e": "ng e2e",
     "generate-icons": "svg-to-ts",
     "generate-apollo": "graphql-codegen",
+    "generate-apollo:start": "graphql-codegen --watch",
     "postinstall": "patch-package"
   },
   "private": true,
