--- a/client/.jsbeautifyrc
+++ b/client/.jsbeautifyrc
@@ -10,7 +10,7 @@
     "indent_size": 2,
     "max_preserve_newlines": 10,
     "preserve_newlines": true,
-    "wrap_attributes": "force-aligned",
+    "wrap_attributes": "force",
     "wrap_attributes_indent_size": 2,
     "unformatted": ["a", "span", "img", "code", "pre", "sub", "sup", "em", "strong", "b", "i", "u", "strike", "big", "small", "pre", "h1", "h2", "h3", "h4", "h5", "h6"],
     "wrap_line_length": 0
