--- a/client/angular.json
+++ b/client/angular.json
@@ -14,6 +14,9 @@
         },
         "@schematics/angular:application": {
           "strict": true
+        },
+        "@ngx-formly/schematics:component": {
+          "styleext": "less"
         }
       },
       "root": "",
