--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "ng-zorro-antd": "^11.0.0",
     "ngx-cookie-service": "^11.0.2",
     "ngx-logger": "^4.2.1",
+    "ngx-mask": "^11.1.5",
     "ngx-timeago": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
