--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "ngx-mask": "^11.1.5",
     "ngx-timeago": "^2.0.0",
     "rxjs": "~6.6.0",
+    "ts-enum-util": "^4.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
