generate-icons yarn script implements two-stage workflow

--- a/client/.svg-to-tsrc
+++ b/client/.svg-to-tsrc
@@ -1,17 +1,10 @@
 {
   "conversionType": "constants",
-  "srcFiles": ["./src/assets/icons/**/*.svg"],
+  "srcFiles": ["./src/assets/icons/.tmp/**/*.svg"],
   "outputDirectory": "./src/app/generated",
   "interfaceName": "CivicIcon",
   "typeName": "Icon",
   "prefix": "icon",
   "fileName": "civic.icons",
-  "svgoConfig": {
-    "plugins": [
-      {
-        "cleanupAttrs": true
-      }
-    ]
-  },
   "compileSources": true
 }
