--- a/server/Gemfile
+++ b/server/Gemfile
@@ -39,6 +39,13 @@ gem 'image_processing', '~> 1.12.1'
 gem 'trestle', '~>0.9.5'
 gem 'trestle-search', '~>0.4.3'
 
+
+#elasticsearch
+gem 'searchkick', '~> 4.5.0'
+gem 'oj', '~> 3.12.0'
+gem 'typhoeus', '~>1.4.0'
+
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
@@ -61,6 +68,7 @@ group :development do
 
   gem 'pry'
   gem 'pry-rails'
+  gem 'solargraph'
 end
 
 group :test do
