--- a/server/Gemfile
+++ b/server/Gemfile
@@ -39,12 +39,12 @@ gem 'image_processing', '~> 1.12.1'
 gem 'trestle', '~>0.9.5'
 gem 'trestle-search', '~>0.4.3'
 
-
 #elasticsearch
 gem 'searchkick', '~> 4.5.0'
 gem 'oj', '~> 3.12.0'
 gem 'typhoeus', '~>1.4.0'
 
+gem 'audited', '~> 4.9'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
