--- a/client/angular.json
+++ b/client/angular.json
@@ -33,7 +33,7 @@
               },
               "replaceDuplicatePlugins": true
             },
-            "outputPath": "../../public",
+            "outputPath": "../server/public",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -77,7 +77,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "10mb"
                 },
                 {
                   "type": "anyComponentStyle",
