--- a/server/Gemfile
+++ b/server/Gemfile
@@ -32,6 +32,7 @@ gem 'scenic', '~>1.5.4'
 gem 'bootsnap', '>= 1.4.4', require: false
 
 gem 'diffy', '~> 3.4.0'
+gem 'htmlentities', '~>4.3.4'
 
 gem 'active_storage_validations', '~> 0.9.2'
 gem 'image_processing', '~> 1.12.1'
