--- a/server/Gemfile
+++ b/server/Gemfile
@@ -47,6 +47,12 @@ gem 'typhoeus', '~>1.4.0'
 
 gem 'audited', '~> 4.9'
 
+
+#user comment rendering
+gem 'rinku', '~> 2.0.6'
+gem 'sanitize', '~> 6.0.0'
+gem 'kramdown', '~> 2.3.1'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
