allow signed in users to upload their own profile images

--- a/client/proxy.config.json
+++ b/client/proxy.config.json
@@ -7,6 +7,10 @@
     "target": "http://localhost:3000",
     "secure": false
   },
+  "/api/*": {
+    "target": "http://localhost:3000",
+    "secure": false
+  },
   "/rails": {
     "target": "http://localhost:3000",
     "secure": false
