--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,6 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^11.0.0",
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular-eslint/eslint-plugin": "^1.0.0",
     "@angular-eslint/eslint-plugin-template": "^1.0.0",
@@ -86,7 +85,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ngx-json-viewer": "^3.0.2",
-    "patch-package": "^6.2.2",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "rxjs-spy": "^7.5.3",
