--- a/server/Gemfile
+++ b/server/Gemfile
@@ -28,6 +28,9 @@ gem 'search_object_graphql', '0.3.1'
 
 gem 'scenic', '~>1.5.4'
 
+#higher performance json encoding
+gem 'oj', '~> 3.13.10'
+
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
 
@@ -43,7 +46,6 @@ gem 'trestle-search', '~>0.4.3'
 #elasticsearch
 gem 'searchkick', '~> 4.5.0'
 gem 'elasticsearch', '< 7.14'
-gem 'oj', '~> 3.12.0'
 gem 'typhoeus', '~>1.4.0'
 
 gem 'audited', '~> 4.9'
