begin porting old secrets to new credential system

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -39,3 +39,11 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+/config/credentials/development.key
+
+/config/credentials/production.key
+
+/config/credentials/staging.key
+
+/config/credentials/test.key
