--- a/server/config/database.yml
+++ b/server/config/database.yml
@@ -26,4 +26,4 @@ staging:
   pool: 20
   database: civic_staging
   username: <%=  Rails.application.credentials.dig(:database, :username) %>
-  password: <%=  Rails.application.credentials.dig(:database, :password %>
+  password: <%=  Rails.application.credentials.dig(:database, :password) %>
