enable google analytics

--- a/client/angular.json
+++ b/client/angular.json
@@ -53,6 +53,10 @@
           },
           "configurations": {
             "production": {
+              "index": {
+                "input": "src/index.prod.html",
+                "output": "index.html"
+              },
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
