allow /links/ forwarding for drugs and diseases

--- a/client/proxy.config.json
+++ b/client/proxy.config.json
@@ -11,6 +11,10 @@
     "target": "http://localhost:3000",
     "secure": false
   },
+  "/links/*": {
+    "target": "http://localhost:3000",
+    "secure": false
+  },
   "/rails": {
     "target": "http://localhost:3000",
     "secure": false
