refactored a bunch of nz-space elements for v13 migration

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": [],
-    "skipLibCheck": true
+    "skipLibCheck": false
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
   "include": ["src/**/*.d.ts"]
