fixed less imports from node_modules

--- a/client/angular.json
+++ b/client/angular.json
@@ -45,7 +45,8 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "src/themes/"
+                "src/themes/",
+                "node_modules"
               ]
             },
             "scripts": [],
