--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,8 @@
     "@angular/router": "~13.1.3",
     "@apollo/client": "^3.5.8",
     "@ngrx/component": "^12.5.1",
-    "@ngx-formly/core": "^5.10.32",
-    "@ngx-formly/ng-zorro-antd": "^0.0",
+    "@ngx-formly/core": "6.0.0-next.7",
+    "@ngx-formly/ng-zorro-antd": "6.0.0-next.7",
     "apollo-angular": "^2.1.0",
     "ng-zorro-antd": "^13.0.1",
     "ngx-cookie-service": "^13.1.2",
@@ -57,7 +57,7 @@
     "@graphql-codegen/typescript-operations": "^1.17.13",
     "@graphql-eslint/eslint-plugin": "^0.7.1",
     "@graphql-inspector/cli": "^2.3.0",
-    "@ngx-formly/schematics": "^5.10.30",
+    "@ngx-formly/schematics": "6.0.0-next.7",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
