--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,9 +3,8 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@app/*": [
-        "app/*"
-      ]
+      "@app/*": ["app/*"],
+      "@libs/*": ["libs/*"]
     },
     "outDir": "./dist/out-tsc",
     "resolveJsonModule": true,
@@ -21,11 +20,7 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "ESNext",
-    "lib": [
-      "es2018",
-      "dom",
-      "esnext.asynciterable"
-    ],
+    "lib": ["es2018", "dom", "esnext.asynciterable"],
     "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
